--- a/doc/literature_review/resources/bibliography.bib
+++ b/doc/literature_review/resources/bibliography.bib
@@ -517,7 +517,7 @@ url="http://dx.doi.org/10.1007/978-3-540-25935-0_4"
 
 @article{standard1996ebnf,
   title={Ebnf: Iso/iec 14977: 1996 (e)},
-  author={Standard, EBNF Syntaxt Specification},
+  author={ISO, EBNF Syntax Specification},
   journal={URL http://www. cl. cam. ac. uk/mgk25/iso-14977. pdf},
   volume={70},
   year={1996}
@@ -566,11 +566,11 @@ url="http://dx.doi.org/10.1007/978-3-540-25935-0_4"
   organization={Springer}
 }
 
-@book{mosses2005action,
+@book{mosses1992action,
   title={Action semantics},
   author={Mosses, Peter},
   volume={26},
-  year={2005},
+  year={1992},
   publisher={Cambridge University Press}
 }
 
