--- a/doc/dissertation/resources/bibliography.bib
+++ b/doc/dissertation/resources/bibliography.bib
@@ -832,3 +832,39 @@ url="http://dx.doi.org/10.1007/978-3-540-25935-0_4"
   year={2001},
   publisher={SRCE-Sveu{\v{c}}ili{\v{s}}ni ra{\v{c}}unski centar}
 }
+
+@article{boyer1984mechanical,
+  title={A mechanical proof of the unsolvability of the halting problem},
+  author={Boyer, Robert S and Moore, J Strother},
+  journal={Journal of the ACM (JACM)},
+  volume={31},
+  number={3},
+  pages={441--458},
+  year={1984},
+  publisher={ACM}
+}
+
+@misc{megaparsec,
+  title = {Megaparsec},
+  author = {Mark Karpov},
+  howpublished = {\url{https://hackage.haskell.org/package/megaparsec}},
+  note = {Accessed: 2017-04-06},
+  year = 2017
+}
+
+@misc{idris_lang,
+  title = {Idris},
+  author = {Edwin Brady},
+  howpublished = {\url{https://www.idris-lang.org/}},
+  note = {Accessed: 2017-04-06},
+  year = 2017
+}
+
+@incollection{luenberger2016simplex,
+  title={The Simplex Method},
+  author={Luenberger, David G and Ye, Yinyu},
+  booktitle={Linear and Nonlinear Programming},
+  pages={33--82},
+  year={2016},
+  publisher={Springer}
+}
