--- a/doc/dissertation/resources/introduction.tex
+++ b/doc/dissertation/resources/introduction.tex
@@ -1,6 +1,14 @@
 
 \chapter{Project Introduction} % (fold)
 \label{cha:project_introduction}
+This section will:
+\begin{itemize}
+    \item \textbf{Introduce the Project:} A brief overview of the inspiration for the project, and how that materialised as the project itself.
+    \item \textbf{Overview of Initial Concept}: The initial concept for the system.
+    \item \textbf{The Final System:} How that initial concept came to materialise as the final system.
+    \item \textbf{Document Overview:} An overview of what the dissertation aims to achieve, and it structure. 
+\end{itemize}
+
 This project aims to create a framework and toolchain for the formal verification of embedded, executable Domain-Specific Languages.
 The hope is to allow the generation of provably correct, tailored programming languages that can encapsulate domain logic inside another program.
 These languages will be compiled through the use of a Haskell metacompiler (a compiler that generates a compiler) that takes both syntax and semantics for the Domain-Specific Language, generating executable libraries for embedding the DSL.
