--- a/doc/dissertation/resources/bath_dissertation_definitions.tex
+++ b/doc/dissertation/resources/bath_dissertation_definitions.tex
@@ -1,29 +1,29 @@
 %%
 %% Package includes to provide the basic style
 %%
-\usepackage{harvard}    % Uses harvard style referencing
-\usepackage{graphicx}   % Permits import of various graphics formats
-\usepackage{hyperref}   % Provides hyperlinks to sections automatically
-\usepackage{pdflscape}  % Provides landscape mode for end code listings
-\usepackage{multicol}   % Provides ability to split output into columns
-\usepackage{listings}   % Provides styled code listings
+% \usepackage{harvard}    % Uses harvard style referencing
+% \usepackage{graphicx}   % Permits import of various graphics formats
+% \usepackage{hyperref}   % Provides hyperlinks to sections automatically
+% \usepackage{pdflscape}  % Provides landscape mode for end code listings
+% \usepackage{multicol}   % Provides ability to split output into columns
+% \usepackage{listings}   % Provides styled code listings
 
 
 %%
 %% Set some page size changes from the standard article class
 %%
-\usepackage{calc}
-\setlength{\parskip}{6pt}
-\setlength{\parindent}{0pt}
-\addtolength{\hoffset}{-0.5cm}
-\addtolength{\textwidth}{2.5cm}
+% \usepackage{calc}
+% \setlength{\parskip}{6pt}
+% \setlength{\parindent}{0pt}
+% \addtolength{\hoffset}{-0.5cm}
+% \addtolength{\textwidth}{2.5cm}
 
 
 %%
 %% Format definitions for the style
 %%
-\bibliographystyle{agsm}  %{alpha}
-\citationstyle{dcu}
+% \bibliographystyle{agsm}  %{alpha}
+% \citationstyle{dcu}
 \pagestyle{headings}
 \fussy
 
@@ -60,13 +60,13 @@
     with its author. The Intellectual Property Rights of the products
     produced as part of the project belong to the author unless otherwise specified
     below, in accordance with the University of Bath's policy on intellectual property 
-   (see http://www.bath.ac.uk/ordinances/22.pdf).
+   (see http://www.bath.ac.uk/ordinances/22.pdf).\\
 
     This copy of the dissertation has been supplied on condition that anyone
     who consults it is understood to recognise that its copyright rests with its
     author and that no quotation from the dissertation and no information
     derived from it may be published without the prior written consent of
-    the author.
+    the author.\\
 
     \section*{Declaration}
     This dissertation is submitted to the University of Bath in accordance
